--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,48 @@
           <ul class="projects">
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-1.webp 1x, ./images/works/mobile/works-1@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-1.jpg 1x, ./images/works/mobile/works-1@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-1-tablet.webp    1x,
+                      ./images/works/tablet/works-1-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-1-tablet.jpg 1x, ./images/works/tablet/works-1-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-1-desktop.webp,
+                      ./images/works/desktop/works-1-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-1-desktop.jpg    1x,
+                      ./images/works/desktop/works-1-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Технокряк" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -184,7 +225,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/neworlan.jpg" alt="Постер" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-2.webp 1x, ./images/works/mobile/works-2@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-2.jpg 1x, ./images/works/mobile/works-2@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-2-tablet.webp    1x,
+                      ./images/works/tablet/works-2-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-2-tablet.jpg 1x, ./images/works/tablet/works-2-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-2-desktop.webp,
+                      ./images/works/desktop/works-2-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-2-desktop.jpg    1x,
+                      ./images/works/desktop/works-2-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Постер" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -198,7 +280,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/seafood.jpg" alt="Приложения" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-3.webp 1x, ./images/works/mobile/works-3@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-3.jpg 1x, ./images/works/mobile/works-3@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-3-tablet.webp    1x,
+                      ./images/works/tablet/works-3-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-3-tablet.jpg 1x, ./images/works/tablet/works-3-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-3-desktop.webp,
+                      ./images/works/desktop/works-3-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-3-desktop.jpg    1x,
+                      ./images/works/desktop/works-3-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Ресторан" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -212,7 +335,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/prime.jpg" alt="Проект Prime" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-4.webp 1x, ./images/works/mobile/works-4@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-4.jpg 1x, ./images/works/mobile/works-4@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-4-tablet.webp    1x,
+                      ./images/works/tablet/works-4-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-4-tablet.jpg 1x, ./images/works/tablet/works-4-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-4-desktop.webp,
+                      ./images/works/desktop/works-4-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-4-desktop.jpg    1x,
+                      ./images/works/desktop/works-4-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Проект Prime" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -226,7 +390,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-5.webp 1x, ./images/works/mobile/works-5@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-5.jpg 1x, ./images/works/mobile/works-5@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-5-tablet.webp    1x,
+                      ./images/works/tablet/works-5-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-5-tablet.jpg 1x, ./images/works/tablet/works-5-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-5-desktop.webp,
+                      ./images/works/desktop/works-5-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-5-desktop.jpg    1x,
+                      ./images/works/desktop/works-5-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Проект Boxes" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -240,7 +445,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/borders.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-6.webp 1x, ./images/works/mobile/works-6@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-6.jpg 1x, ./images/works/mobile/works-6@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-6-tablet.webp    1x,
+                      ./images/works/tablet/works-6-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-6-tablet.jpg 1x, ./images/works/tablet/works-6-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-6-desktop.webp,
+                      ./images/works/desktop/works-6-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-6-desktop.jpg    1x,
+                      ./images/works/desktop/works-6-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Inspiration has no Borders" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -254,7 +500,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/limitededition.jpg" alt="Издание Limited Edition" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-7.webp 1x, ./images/works/mobile/works-7@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-7.jpg 1x, ./images/works/mobile/works-7@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-7-tablet.webp    1x,
+                      ./images/works/tablet/works-7-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-7-tablet.jpg 1x, ./images/works/tablet/works-7-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-7-desktop.webp,
+                      ./images/works/desktop/works-7-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-7-desktop.jpg    1x,
+                      ./images/works/desktop/works-7-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Издание Limited Edition" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -268,7 +555,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/lab.jpg" alt="Проект LAB" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-8.webp 1x, ./images/works/mobile/works-8@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-8.jpg 1x, ./images/works/mobile/works-8@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-8-tablet.webp    1x,
+                      ./images/works/tablet/works-8-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-8-tablet.jpg 1x, ./images/works/tablet/works-8-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-8-desktop.webp,
+                      ./images/works/desktop/works-8-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-8-desktop.jpg    1x,
+                      ./images/works/desktop/works-8-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Проект LAB" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -282,7 +610,48 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img src="./images/business.jpg" alt="Growing Business" width="370" height="294" />
+                <picture>
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-9.webp 1x, ./images/works/mobile/works-9@2x.webp 2x"
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="./images/works/mobile/works-9.jpg 1x, ./images/works/mobile/works-9@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="
+                      ./images/works/tablet/works-9-tablet.webp    1x,
+                      ./images/works/tablet/works-9-tablet@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(max-width: 1199px)"
+                    srcset="./images/works/tablet/works-9-tablet.jpg 1x, ./images/works/tablet/works-9-tablet@2x.jpg 2x"
+                  />
+
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-9-desktop.webp,
+                      ./images/works/desktop/works-9-desktop@2x.webp 2x
+                    "
+                    type="image/webp"
+                  />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/works/desktop/works-9-desktop.jpg    1x,
+                      ./images/works/desktop/works-9-desktop@2x.jpg 2x
+                    "
+                  />
+
+                  <img src="#" alt="Growing Business" />
+                </picture>
                 <p class="project-info-title">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                   цифрового шпионажа и атак на защищённые сервера конкурентов.
