--- a/index.html
+++ b/index.html
@@ -563,13 +563,13 @@
     </main>
 
     <!-- Футер -->
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container footer-info">
-        <div>
-          <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a> -->
+        <div class="footer-adress-container">
+          <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
 
           <!-- Адреса -->
-          <!-- <address class="adress-footer adress" id="contacts">
+          <address class="adress-footer adress" id="contacts">
             <ul class="">
               <li class="footer-adress">
                 <a href="/" class="adress-info">г. Киев, пр-т Леси Украинки, 26 </a>
@@ -619,9 +619,9 @@
               </a>
             </li>
           </ul>
-        </div> -->
+        </div>
 
-        <!-- <div class="footer-submit">
+        <div class="footer-submit">
           <form action="#">
             <p class="join">Подпишитесь на рассылку</p>
             <label>
@@ -638,7 +638,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Модалка -->
     <div class="backdrop is-hidden" data-modal>
