--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
     <!-- Футер -->
     <footer class="page-footer">
       <div class="container footer-info">
+        <div class="test">
         <div class="footer-adress-container">
           <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
 
@@ -619,6 +620,8 @@
               </a>
             </li>
           </ul>
+        </div>
+
         </div>
         
 
