--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <ul class="header-contacts__list">
             <li class="header-contacts__item header-contacts__item_position">
               <a href="mailto:info@devstudio.com" class="header-contacts__link">
-                <svg class="header-contacts__icon header-contacts__icon_position" width="16px" height="12px">
+                <svg class="header-contacts__icon header-contacts__icon_position header-contacts__icon_size" width="16px" height="12px">
                   <use href="./images/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -128,7 +128,7 @@
             </li>
             <li class="header-contacts__item header-contacts__item_position">
               <a href="tel:+380961111111" class="header-contacts__link">
-                <svg class="header-contacts__icon header-contacts__icon_position" width="10px" height="16px">
+                <svg class="header-contacts__icon header-contacts__icon_position header-contacts__icon_height" width="10px" height="16px">
                   <use href="./images/sprite.svg#icon-cell"></use>
                 </svg>
                 +38 096 111 11 11</a
