--- a/portfolio.html
+++ b/portfolio.html
@@ -734,8 +734,6 @@
           </ul>
         </div>
 
-        
-
         <div class="footer-submit">
           <form action="#">
             <p class="join">Подпишитесь на рассылку</p>
@@ -750,7 +748,7 @@
             </div>
           </form>
         </div>
-
+      </div>
     </footer>
     <script src="./js/mobile.js"></script>
   </body>
